# Sznajd-model

./: CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  matplotlibcpp.h  table_utils.cpp
